--- a/kadai05/index.html
+++ b/kadai05/index.html
@@ -9,6 +9,9 @@
         <header>
             
         </header>
+        <main>
+            <div id="pokemonList" class="pokemon-list"></div>
+        </main>
     </body>
 
 </html>
