--- a/kadai05/index.html
+++ b/kadai05/index.html
@@ -6,11 +6,27 @@
     <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <header>
-            
+        <header class="wrap2 m-plus-rounded-1c-bold">
+            <a href="./index.html" class="logo">
+                <img src="./img/logo.png" alt="ロゴ">
+            </a><!-- end logo -->
+
+            <ul class="inner-nav">
+                <li><a href="./index.html">HOME</a></li>
+                <li><a href="./list.html">LIST</a></li>
+                <li><a href="https://www.youtube.com/user/PokemonCoJp" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://x.com/Pokemon_cojp" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/pokemon_jpn/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://page.line.me/pokemon?openQrModal=true" target="_blank"><i class="fa-brands fa-line"></i></a></li>
+                <li><a href="https://www.tiktok.com/@pokemon?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+            </ul><!-- end list-nav -->
+
+            <div class="inner-search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div><!-- end inner-search -->
         </header>
         <main>
-            <div id="pokemonList" class="pokemon-list"></div>
+            
         </main>
     </body>
 
